Use linters to validate

--- a/about.html
+++ b/about.html
@@ -1,155 +1,167 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
+    <head>
+        <meta charset="utf-8" />
+        <title>
+            Seyram Kudolo | UX Designer
+        </title>
+        <!--favicon-->
+        <link rel="shortcut icon" href="img/favicon.io" />
+        <!--normalize cdn-->
+        <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" />
+        <!--montserrat (google) font-->
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet" />
+        <!--css stylesheet-->
+        <link rel="stylesheet" type="text/css" href="css/style.css" />
+        <!--fontawesome icons-->
+        <script src="https://kit.fontawesome.com/c89f8c4219.js" crossorigin="anonymous"></script>
+        <!--responsiveness-->
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+    </head>
 
-<head>
-  <meta charset="utf-8" />
-  <title>
-    Seyram Kudolo | UX Designer
-  </title>
-  <!--favicon-->
-  <link rel="shortcut icon" href="img/favicon.io" />
-  <!--normalize cdn-->
-  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" />
-  <!--montserrat (google) font-->
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet" />
-  <!--css stylesheet-->
-  <link rel="stylesheet" type="text/css" href="css/style.css" />
-  <!--fontawesome icons-->
-  <script src="https://kit.fontawesome.com/c89f8c4219.js" crossorigin="anonymous"></script>
-  <!--responsiveness-->
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-</head>
-
-<body id="about">
-  <header>
-    <div class="container">
-      <div class="navtoggle" id="myNavtoggle">
-      <picture>
-        <a href="index.html">
-          <source srcset="img/logo@1.png" media="(max-width:767px)" class="logo" />
-        </a>
-        <a href="index.html"><img src="img/logo@2.png" alt="Logo" class="logo" /></a>
-      </picture>
-      <nav>
-        <ul>
-          <li><a href="index.html">Projects</a></li>
-          <li><a href="about.html">About</a></li>
-          <li><a href="files/seyram-kudolo-resume.pdf" target="_blank">Resume</a></li>
-          <li><a href="#contact" onclick="menuToggle()">Contact</a></li>
-          <li><a href="javascript:void(0);" class="icon" onclick="menuToggle()"><i class="fas fa-bars"></i></a></li>
-        </ul>
-      </nav>
-    </div>
-    </div>
-  </header>
-  <!--begining of hero section-->
-  <main>
-    <!--this is the About heading-->
-    <div>
-      <div class="container">
-        <h1>About</h1>
-      </div>
-    </div>
-    <!--end of the About heading-->
-    <!--beginning of second section with page content-->
-    <div>
-      <!--main section-->
-      <div class="container">
-        <!--container/wrapper-->
-        <picture>
-          <source srcset="img/seyram@1.jpeg" media="(max-width:767px)">
-          <img src="img/seyram@2.jpeg" alt="Image of Seyram">
-        </picture>
-        <div>
-          <!--beginning of my story & tools section-->
-          <div>
-            <!--beginning of 'my story' section-->
-            <h2>My Story</h2>
-            <h4>How Did You Get Into UX?</h4>
-            <p>I always knew I wanted to be an artist or a designer of some kind growing up. I discovered UX and UI design after my final year in university (Joint Hons. in Communication & Sociology), and I fell in love with the design thinking
-              process. I enrolled myself in Career Foundry's UX Design program because I wanted to well-position myself within the design space to learn (and continue learning) and contribute as much as I can (and it's been great thus far!).</p>
-            <h4>What Are You Passionate About?</h4>
-            <p>As UX Designers, "our mission is to listen. Our goal is to understand the complexity of systems we create and the people that use them. Our work is inspired by humans and created for humans to improve the human condition” (Career
-              Foundry). I'm passionate about creating appealing and usable designs for people. Before I decided on the UX career path, I wanted to be a UI designer focused solely on interface design. After testing some of my attractive designs on
-              friends and family, I realized if people can't accomplish their goals, or navigate the UI then it results in a negative user experience. UX attempts to understand a person's needs and then delivers a product that addresses those
-              specific issues. The focus goes beyond visuals, and I love that.</p>
-            <h4>What Do You Do Outside Of Work?</h4>
-            <p>If you can't find me designing at my computer, I'm definitely watching The Office on Netflix or socializing with friends and family 😊.</p>
-            <a href="files/seyram-kudolo-resume.pdf" target="_blank" class="button">Download my Resume</a>
-          </div>
-          <!--end of 'my story' section-->
-          <div>
-            <!--beginning of 'tools' section-->
-            <h2>Skills & Tools</h2>
-            <div class="row" id="skills">
-              <!--beginning of 'relevant skills' and 'tools' container-->
-              <div class="col-md-6">
-                <!--beginning of relevant skills-->
-                <h3>Relevant Skills</h3>
-                <ul>
-                  <li>Generative & Evaluative Research</li>
-                  <li>Usability Testing</li>
-                  <li>Preference & A/B Testing</li>
-                  <li>Persona Development</li>
-                  <li>Interviews</li>
-                  <li>Task Analysis and User Flows</li>
-                  <li>Qualitative and Quantitative Data Analysis</li>
-                  <li>Basic HTML, CSS, and JavaScript</li>
-                </ul>
-              </div>
-              <!--end of relevant skills-->
-              <div class="col-md-6" id="tools">
-                <!--beginning of 'tools'-->
-                <h3>My Toolkit</h3>
-                <h4>Design & Prototyping</h4>
-                <ul>
-                  <li>Figma</li>
-                  <li>Adobe XD</li>
-                  <li>Marvel</li>
-                  <li>InVision</li>
-                  <li>Miro</li>
-                  <li>Adobe Illustrator</li>
-                  <li>Atom</li>
-                </ul>
-              </div>
-              <!--end of 'tools'-->
+    <body id="about">
+        <header>
+            <div class="container">
+                <div class="navtoggle" id="myNavtoggle">
+                    <a href="index.html"><img src="img/logo@2.png" alt="Logo" class="logo" /></a>
+                    <nav>
+                        <ul>
+                            <li><a href="index.html">Projects</a></li>
+                            <li><a href="about.html">About</a></li>
+                            <li><a href="files/seyram-kudolo-resume.pdf" target="_blank">Resume</a></li>
+                            <li><a href="#contact" onclick="menuToggle()">Contact</a></li>
+                            <li>
+                                <a href="javascript:void(0);" class="icon" onclick="menuToggle()"><i class="fas fa-bars"></i></a>
+                            </li>
+                        </ul>
+                    </nav>
+                </div>
             </div>
-            <!--end of 'relevant skills' and 'tools' container-->
-          </div>
-          <!--end of 'tools' section-->
-        </div>
-        <!--end of my story & tools section-->
-      </div>
-      <!--end of container/wrapper-->
-    </div>
-    <!--end of section with page content-->
-  </main>
-  <br>
-  <footer id="contact">
-    <div class="container">
-      <h2>Like What You See?</h2>
-      <p>Get in touch with me by phone at <a href="tel:1234567890">1234567890</a>.</p>
-      <div>
-        <p>Prefer to email?</p>
-        <div>
-          <a href="mailto:google@gmail.com" class="button contact">Email Me</a>
-        </div>
-      </div>
-      <div>
-        <a href="https://www.linkedin.com/in/seyram-kudolo/" target="_blank"><svg height="67px" id="Layer_1" style="enable-background:new 0 0 67 67;" version="1.1" viewBox="0 0 67 67" width="67px" xml:space="preserve"
-            xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-            <path
-              d="M50.837,48.137V36.425c0-6.275-3.35-9.195-7.816-9.195  c-3.604,0-5.219,1.983-6.119,3.374V27.71h-6.79c0.09,1.917,0,20.427,0,20.427h6.79V36.729c0-0.609,0.044-1.219,0.224-1.655  c0.49-1.22,1.607-2.483,3.482-2.483c2.458,0,3.44,1.873,3.44,4.618v10.929H50.837z M22.959,24.922c2.367,0,3.842-1.57,3.842-3.531  c-0.044-2.003-1.475-3.528-3.797-3.528s-3.841,1.524-3.841,3.528c0,1.961,1.474,3.531,3.753,3.531H22.959z M34,64  C17.432,64,4,50.568,4,34C4,17.431,17.432,4,34,4s30,13.431,30,30C64,50.568,50.568,64,34,64z M26.354,48.137V27.71h-6.789v20.427  H26.354z"
-              style="fill-rule:evenodd;clip-rule:evenodd;fill:#007AB9;" />
-          </svg></a>
-      </div>
-      <p id="copyright">COPYRIGHT SEYRAM-KUDOLO 2021</p>
-    </div>
-  </footer>
-  <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-  <script src="js/scripts.js"></script>
-</body>
-
+        </header>
+        <!--begining of hero section-->
+        <main>
+            <!--this is the About heading-->
+            <div>
+                <div class="container">
+                    <h1>About</h1>
+                </div>
+            </div>
+            <!--end of the About heading-->
+            <!--beginning of second section with page content-->
+            <div>
+                <!--main section-->
+                <div class="container">
+                    <!--container/wrapper-->
+                    <picture>
+                        <source srcset="img/seyram@1.jpeg" media="(max-width:767px)" />
+                        <img src="img/seyram@2.jpeg" alt="Image of Seyram" />
+                    </picture>
+                    <div>
+                        <!--beginning of my story & tools section-->
+                        <div>
+                            <!--beginning of 'my story' section-->
+                            <h2>My Story</h2>
+                            <h4>How Did You Get Into UX?</h4>
+                            <p>
+                                I always knew I wanted to be an artist or a designer of some kind growing up. I discovered UX and UI design after my final year in university (Joint Hons. in Communication & Sociology), and I fell in love
+                                with the design thinking process. I enrolled myself in Career Foundry's UX Design program because I wanted to well-position myself within the design space to learn (and continue learning) and contribute as
+                                much as I can (and it's been great thus far!).
+                            </p>
+                            <h4>What Are You Passionate About?</h4>
+                            <p>
+                                As UX Designers, "our mission is to listen. Our goal is to understand the complexity of systems we create and the people that use them. Our work is inspired by humans and created for humans to improve the
+                                human condition” (Career Foundry). I'm passionate about creating appealing and usable designs for people. Before I decided on the UX career path, I wanted to be a UI designer focused solely on interface
+                                design. After testing some of my attractive designs on friends and family, I realized if people can't accomplish their goals, or navigate the UI then it results in a negative user experience. UX attempts to
+                                understand a person's needs and then delivers a product that addresses those specific issues. The focus goes beyond visuals, and I love that.
+                            </p>
+                            <h4>What Do You Do Outside Of Work?</h4>
+                            <p>If you can't find me designing at my computer, I'm definitely watching The Office on Netflix or socializing with friends and family 😊.</p>
+                            <a href="files/seyram-kudolo-resume.pdf" target="_blank" class="button">Download my Resume</a>
+                        </div>
+                        <!--end of 'my story' section-->
+                        <div>
+                            <!--beginning of 'tools' section-->
+                            <h2>Skills & Tools</h2>
+                            <div class="row" id="skills">
+                                <!--beginning of 'relevant skills' and 'tools' container-->
+                                <div class="col-md-6">
+                                    <!--beginning of relevant skills-->
+                                    <h3>Relevant Skills</h3>
+                                    <ul>
+                                        <li>Generative & Evaluative Research</li>
+                                        <li>Usability Testing</li>
+                                        <li>Preference & A/B Testing</li>
+                                        <li>Persona Development</li>
+                                        <li>Interviews</li>
+                                        <li>Task Analysis and User Flows</li>
+                                        <li>Qualitative and Quantitative Data Analysis</li>
+                                        <li>Basic HTML, CSS, and JavaScript</li>
+                                    </ul>
+                                </div>
+                                <!--end of relevant skills-->
+                                <div class="col-md-6" id="tools">
+                                    <!--beginning of 'tools'-->
+                                    <h3>My Toolkit</h3>
+                                    <h4>Design & Prototyping</h4>
+                                    <ul>
+                                        <li>Figma</li>
+                                        <li>Adobe XD</li>
+                                        <li>Marvel</li>
+                                        <li>InVision</li>
+                                        <li>Miro</li>
+                                        <li>Adobe Illustrator</li>
+                                        <li>Atom</li>
+                                    </ul>
+                                </div>
+                                <!--end of 'tools'-->
+                            </div>
+                            <!--end of 'relevant skills' and 'tools' container-->
+                        </div>
+                        <!--end of 'tools' section-->
+                    </div>
+                    <!--end of my story & tools section-->
+                </div>
+                <!--end of container/wrapper-->
+            </div>
+            <!--end of section with page content-->
+        </main>
+        <br />
+        <footer id="contact">
+            <div class="container">
+                <h2>Like What You See?</h2>
+                <p>Get in touch with me by phone at <a href="tel:1234567890">1234567890</a>.</p>
+                <div>
+                    <p>Prefer to email?</p>
+                    <div>
+                        <a href="mailto:google@gmail.com" class="button contact">Email Me</a>
+                    </div>
+                </div>
+                <div>
+                    <a href="https://www.linkedin.com/in/seyram-kudolo/" target="_blank">
+                        <svg
+                            height="67px"
+                            id="Layer_1"
+                            style="enable-background: new 0 0 67 67;"
+                            version="1.1"
+                            viewBox="0 0 67 67"
+                            width="67px"
+                            xml:space="preserve"
+                            xmlns="http://www.w3.org/2000/svg"
+                            xmlns:xlink="http://www.w3.org/1999/xlink"
+                        >
+                            <path
+                                d="M50.837,48.137V36.425c0-6.275-3.35-9.195-7.816-9.195  c-3.604,0-5.219,1.983-6.119,3.374V27.71h-6.79c0.09,1.917,0,20.427,0,20.427h6.79V36.729c0-0.609,0.044-1.219,0.224-1.655  c0.49-1.22,1.607-2.483,3.482-2.483c2.458,0,3.44,1.873,3.44,4.618v10.929H50.837z M22.959,24.922c2.367,0,3.842-1.57,3.842-3.531  c-0.044-2.003-1.475-3.528-3.797-3.528s-3.841,1.524-3.841,3.528c0,1.961,1.474,3.531,3.753,3.531H22.959z M34,64  C17.432,64,4,50.568,4,34C4,17.431,17.432,4,34,4s30,13.431,30,30C64,50.568,50.568,64,34,64z M26.354,48.137V27.71h-6.789v20.427  H26.354z"
+                                style="fill-rule: evenodd; clip-rule: evenodd; fill: #007ab9;"
+                            />
+                        </svg>
+                    </a>
+                </div>
+                <p id="copyright">COPYRIGHT SEYRAM-KUDOLO 2021</p>
+            </div>
+        </footer>
+        <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+        <script src="js/scripts.js"></script>
+    </body>
 </html>
