--- a/index.html
+++ b/index.html
@@ -26,22 +26,19 @@
   <header>
     <div class="container">
       <div class="navtoggle" id="myNavtoggle">
-      <picture>
-        <a href="index.html">
-          <source srcset="img/logo@1.png" media="(max-width:767px)" class="logo" />
-        </a>
-        <a href="index.html"><img src="img/logo@2.png" alt="Logo" class="logo" /></a>
-      </picture>
-      <nav>
-        <ul>
-          <li><a href="index.html">Projects</a></li>
-          <li><a href="about.html">About</a></li>
-          <li><a href="files/seyram-kudolo-resume.pdf" target="_blank">Resume</a></li>
-          <li><a href="#contact" onclick="menuToggle()">Contact</a></li>
-          <li><a href="javascript:void(0);" class="icon" onclick="menuToggle()"><i class="fas fa-bars"></i></a></li>
-        </ul>
-      </nav>
-    </div>
+          <a href="index.html">
+            <img src="img/logo@1.png" alt="Logo" class="logo" />
+          </a>
+        <nav>
+          <ul>
+            <li><a href="index.html">Projects</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="files/seyram-kudolo-resume.pdf" target="_blank">Resume</a></li>
+            <li><a href="#contact" onclick="menuToggle()">Contact</a></li>
+            <li><a href="javascript:void(0);" class="icon" onclick="menuToggle()"><i class="fas fa-bars"></i></a></li>
+          </ul>
+        </nav>
+      </div>
     </div>
   </header>
   <!--begining of hero section-->
@@ -83,7 +80,7 @@
           <!--end of text column-->
         </div>
         <!--end of row that holds 2 columns for Enunciate-->
-        
+
         <!--open row for 2 columns for Dig-IT-->
         <div class="row">
           <div class="column col-md-6 col-lg-7">
