Update header text

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <div id="hero">
       <div class="container">
         <h1>
-          Hi, I'm Seyram.<br />
+          Hi👋🏾, I'm Seyram.<br />
           <span>A UX Designer based in Toronto, Canada</span>
         </h1>
         <p>I'm passionate about bridging the gap between people's needs and well-designed technologically feasible solutions.</p>
