--- a/enunciate.html
+++ b/enunciate.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <title>
-            Seyram Kudolo | UX Designer
+            Enunciate | Project
         </title>
         <!--favicon-->
         <link rel="shortcut icon" href="img/favicon.io" />
