Add content to quikpay

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
               QuikPay is a secure financial web app designed to inspire confidence
               in the way Ghanaians perform financial transactions.
             </p>
-            <a href="#" class="button">View Case Study</a>
+            <a href="quikpay.html" class="button">View Case Study</a>
           </div>
           <!--end of text column-->
         </div>
