--- a/quikpay.html
+++ b/quikpay.html
@@ -48,8 +48,17 @@
             <img src="img/quikpay/quikpay@2.png" alt="Enunciate Image and Prototype" />
         </picture>
       </div>
-
     </div>
+    <!--Contents-->
+    <div class="container">
+      <ul>
+        <li>Competitor analysis</li>
+        <li>User Interviews</li>
+        <li>User Personas</li>
+        <li>User Journey Maps</li>
+      </ul>
+    </div>
+
   </main>
 
 
